--- a/week1/.gitignore
+++ b/week1/.gitignore
@@ -25,3 +25,18 @@ result/
 data/*.csv
 
 
+data/spawannxs.txt
+data/Temperatures/
+
+code/myscript.sh
+code/test1.png
+code/test1.tif
+code/MyExampleScript.sh
+code/FirstExample.blg
+code/FirstExample.bbl
+code/FirstExample.aux
+code/FirstBiblio.bib
+code/FirstExample.fdb_latexmk
+code/FirstExample.fls
+code/FirstExample.log
+code/
